# Admine

./: .gitignore  Admine.drawio  Admine.drawio.xml  Admine.excalidraw  CLAUDE.md  CONTRIBUTING.md  README.md  go.mod
.github/: dependabot.yml
vpn_handler/: .gitignore  CLAUDE.md  Cargo.toml  README.md  plugin-redoc-0.yaml
vpn_handler/etc/: VPN Handler.postman_collection.json  log4rs.yaml
vpn_handler/etc/specs/: vpn_hander_api.yaml  vpn_hander_openapi.yaml
vpn_handler/resources/specs/: vpn_hander_api.yaml
vpn_handler/src/: app_context.rs  config.rs  errors.rs  handle.rs  main.rs  queue_handler.rs
vpn_handler/src/api/: server.rs  services.rs
vpn_handler/src/models/: admine_message.rs  api_models.rs  auth_member_request.rs  mod.rs  server_ip_response.rs  vpn_id_response.rs
vpn_handler/src/persistence/: factories.rs  key_value_storage.rs  key_value_storage_factory.rs  mod.rs  sled_store.rs  storage_manager.rs
vpn_handler/src/pub_sub/: factories.rs  mod.rs  pub_sub.rs  pub_sub_factory.rs  redis_pubsub.rs
vpn_handler/src/vpn/: factories.rs  mod.rs  public_ip.rs  tailscale_vpn.rs  vpn.rs  vpn_factory.rs  zerotier_vpn.rs
vpn_handler/test/: vpn_api.py
zerotier_handler/: .env  .gitignore  Cargo.toml  README.md  generate_zerotier_api_client.sh  log4rs.yaml  record.json  zerotier_oas.yaml
zerotier_handler/redis_pub_sub_manager/: Cargo.toml
zerotier_handler/redis_pub_sub_manager/src/: handle.rs  main.rs  utils.rs
zerotier_handler/redis_pub_sub_manager/src/models/: message.rs
zerotier_handler/src/: handle.rs  main.rs  utils.rs
zerotier_handler/src/models/: message.rs  mod.rs
zerotier_handler/src/persistence/: factories.rs  mod.rs  sled_store.rs
zerotier_handler/src/pub_sub/: factories.rs
zerotier_handler/src/vpn/: factories.rs  mod.rs  zerotier_vpn.rs
zerotier_handler/src/zerotier/apis/: configuration.rs  mod.rs  network_member_api.rs
zerotier_handler/src/zerotier/models/: member.rs  member_config.rs  member_config_tags_inner_inner.rs  mod.rs
zerotier_handler/zerotier_api_client/: Cargo.toml  README.md
zerotier_handler/zerotier_api_client/.openapi-generator/: FILES
zerotier_handler/zerotier_api_client/docs/: InviteStatus.md  Ipv6AssignMode.md  Member.md  MemberConfig.md  MemberConfigTagsInnerInner.md  Network.md  NetworkApi.md  NetworkConfig.md  NetworkMemberApi.md  NetworkSsoConfig.md  OrgSsoConfig.md  Organization.md  OrganizationInvitation.md  OrganizationsApi.md  SsoIssuer.md  Status.md  User.md  UserApi.md  UtilApi.md
(+280 files in other folders)
