[package]
name = "vpn_handler"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
redis = { version = "0.30", features = ["tokio-comp"] }
serde_with = { version = "3.12", default-features = false, features = ["base64", "std", "macros"] }
url = "2.5"
reqwest = { version = "0.12", features = ["json", "multipart"] }
log = "0.4"
log4rs = "1.2"
thiserror = "2.0.11"
async-trait = "0.1"
sled = "0.34"