[package]
name = "vpn_handler"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
redis = { version = "0.32", features = ["tokio-comp"] }
serde_with = { version = "3.14", default-features = false, features = ["base64", "std", "macros"] }
url = "2.5"
reqwest = { version = "0.12", features = ["json", "multipart"] }
log = "0.4"
log4rs = "1.4"
thiserror = "2.0.16"
async-trait = "0.1"
sled = "0.34"
actix-web = "4"
zerotier-central-api = "=1.0.3"
public-ip-address = "0.3.5"
strum = { version = "0.27", features = ["derive"] }
envy = "0.4"
derive_builder = "0.20"
displaydoc = "0.2"
toml = "0.9.4"
getset = "0.1.6"
