[package]
name = "redis_pub_sub_manager"
version = "1.0.0"
authors = ["Gustavo Mantovani"]
edition = "2021"

[dependencies]
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
redis = { version = "0.25", features = ["tokio-comp"] }
zerotier_api_client = { path = "../zerotier_api_client" }